Refactor application.properties for environment variables
Updated database and security configurations to use environment variables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=apialunos
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/apialunos
-spring.datasource.username=postgres
-spring.datasource.password=
+# O Spring lerá essas variáveis do ambiente da Railway
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.user.name=admin
-spring.security.user.password=admin123
+# Segurança (melhor usar variáveis aqui também)
+spring.security.user.name=${SECURITY_USER_NAME}
+spring.security.user.password=${SECURITY_USER_PASSWORD}
