Change datasource variables for Railway integration
Updated datasource environment variables for Spring application.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=apialunos
 
-# O Spring lerá essas variáveis do ambiente da Railway
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${PGUSER}
+pring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
