--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # Segurança (melhor usar variáveis aqui também)
 spring.security.user.name=${SECURITY_USER_NAME}
 spring.security.user.password=${SECURITY_USER_PASSWORD}
+
+springdoc.packages-to-scan=br.edu.ifms.infrastructure.web
+springdoc.swagger-ui.cache-fully-configured=true
